Ajuste lógica e limpeza do código